Set a min width to plan cards to prevent layout broken

--- a/portal/src/components/billing/PlanCard.module.css
+++ b/portal/src/components/billing/PlanCard.module.css
@@ -2,6 +2,7 @@
   @apply grid grid-cols-1 gap-8 justify-items-center content-start;
   @apply py-8 px-4;
   @apply border border-solid border-border-primary rounded-xl;
+  @apply min-w-[262px];
 }
 
 .header {
